services/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
spec:
  containers:
  - name: client
    image: radial/busyboxplus:curl
    command:
      - sh
      - -c
      - "while true; do sleep; done"
