services/fallback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-fallback
  labels:
    app: flask-fallback
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-fallback
  template:
    metadata:
      labels:
        app: flask-fallback
    spec:
      containers:
      - name: flask-fallback
        image: joyceiphone/fallback
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5001
