services/fallback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-fallback-service
  labels:
    app: flask-fallback-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    app: flask-fallback
